--- a/ProjetoEMPSOFT/app/build.gradle
+++ b/ProjetoEMPSOFT/app/build.gradle
@@ -30,4 +30,6 @@ dependencies {
     compile 'com.android.support:support-v4:25.1.1'
     compile 'com.android.support:cardview-v7:21.0.+'
     compile 'com.android.support:recyclerview-v7:21.0.+'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
+
 }
